[package]
name = "lignin-html"
version = "0.0.5"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "HTML renderer for lignin VDOM Nodes. This crate is primarily for static and server-side rendering. For client-side use, see lignin-dom."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin-html"
homepage = "https://github.com/Tamschi/lignin-html/tree/v0.0.5"
documentation = "https://docs.rs/lignin-html/0.0.5"
keywords = ["VDOM", "HTML"]
categories = ["web-programming", "text-processing"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin-html" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin-html" }
maintenance = { status = "experimental" }

[features]
std = [] # Implements std::error::Error on lignin_html::Error

[dependencies]
lignin = "0.0.7" # public
logos = "0.12.0"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.23"
